# mcp-neo4j

./: .gitignore  README.md
.github/workflows/: generate-upload-dxt-cypher.yml  pr-mcp-neo4j-data-modeling.yml  publish-cypher.yml  publish-data-modeling.yml
servers/mcp-neo4j-data-modeling/: CHANGELOG.md  Dockerfile  Makefile  README.md  claude_desktop_config.json  inspector.sh  pyproject.toml  test.ipynb  test.sh
servers/mcp-neo4j-data-modeling/src/mcp_neo4j_data_modeling/: __init__.py  data_model.py  models.py  server.py  static.py
servers/mcp-neo4j-data-modeling/tests/integration/: conftest.py  test_http_transport.py  test_http_transport_IT.py  test_stdio_transport_IT.py
servers/mcp-neo4j-data-modeling/tests/unit/: conftest.py  test_data_model.py  test_example_data_models.py  test_server.py
servers/mcp-neo4j-memory/: .gitignore  CHANGELOG.md  Dockerfile  LOCAL_BUILD.md  Makefile  README.md  clear_database.py  pyproject.toml  pytest.ini  test.env  test.env.example  test.sh  test_new_structure.py
servers/mcp-neo4j-memory/docs/: neo4j_memory_api.md
servers/mcp-neo4j-memory/examples/: constraint_usage_example.py  usage_example.py
servers/mcp-neo4j-memory/src/mcp_neo4j_memory/: __init__.py  neo4j_memory.py  server.py
servers/mcp-neo4j-memory/tests/: conftest.py  test_neo4j_memory_pytest.py  test_server_pytest.py
servers/mcp-neo4j-memory/tests/integration/: conftest.py  test_http_transport.py  test_http_transport_IT.py  test_neo4j_memory_IT.py  test_neo4j_memory_integration.py  test_sse_transport_IT.py  test_stdio_transport_IT.py
(+27 files in other folders)
