[project]
name = "mcp-neo4j-data-modeling"
version = "0.1.0"
description = "A simple Neo4j MCP server for creating graph data models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "neo4j-viz>=0.3.1",
    "pydantic>=2.10.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pyright>=1.1.389",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.3",
    "ruff>=0.11.5",
    "testcontainers[neo4j]>=4.10.0",
]

[project.scripts]
mcp-neo4j-data-modeling = "mcp_neo4j_data_modeling:main"
